--- a/templates/teaching.html
+++ b/templates/teaching.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <h2>教學資源</h2>
-  <button onclick="alert('舌象分類教學 - 開發中')">舌象分類教學</button>
+  <button onclick="location.href='/tongue_teaching'">舌象分類教學</button>
   <button onclick="alert('舌象判別練習 - 開發中')">舌象判別練習</button>
   <button onclick="alert('中西醫對照查詢 - 開發中')">中西醫對照查詢</button>
   <button onclick="alert('病例推論練習 - 開發中')">病例推論練習</button>
