--- a/templates/tongue_teaching.html
+++ b/templates/tongue_teaching.html
@@ -22,7 +22,7 @@
 <body>
   <h2>舌象分類教學</h2>
   <div id="tongueWrapper">
-    <img id="tongueImg" src="{{ url_for('static', filename='tongue_diagram.png') }}" alt="舌頭示意圖">
+    <img id="tongueImg" src="{{ url_for('static', filename='overlay.png') }}" alt="舌頭示意圖">
     <!-- 舌尖 -->
     <div class="region" style="top: 20%; left: 40%; width: 20%; height: 10%;"
       onclick="showInfo('舌尖', '心肺功能', '紅潤：心肺正常；偏紅：火氣旺；暗淡：血虛氣弱')"></div>
